--- a/src/less/main.less
+++ b/src/less/main.less
@@ -126,29 +126,6 @@ body {
     }
 }
 
-/*.phone {
-    @media @phone-strict {
-        padding-bottom: 10px;
-        padding-left: 0;
-    }
-    @media @tablet {
-        margin-right: 2px;
-    }
-
-    &__text {
-        @media @phone-strict {
-            font-size: 1em;
-            white-space: nowrap;
-        }
-        @media @tablet {
-            font-weight: bold;
-            font-size: 1.4em;
-            color: @color-text;
-            letter-spacing: .8px;
-        }
-    }
-}*/
-
 .navigation {
     width: 100%;
     background-color: @color-background;
@@ -178,6 +155,14 @@ body {
         font-size: 1em;
         color: @color-text;
 
+        @media @phone-strict {
+            display: none;
+        }
+
+        @media @tablet-strict {
+            display: none;
+        }
+
         &_active {
             color: @color-text-list;
             font-weight: bold;
@@ -191,6 +176,30 @@ body {
         margin-right: 3px;
         background: white url(../img/search.png) no-repeat 97%;
         border: 1px solid @color-border;
+
+        @media @phone-strict {
+            height: 25px;
+            width: 180px;
+        }
+
+        @media @tablet-strict {
+            height: 28px;
+            width: 200px;
+        }
+    }
+}
+
+.hamburger__icon {
+    color: @color-text;
+    font-size: 1.4em;
+    padding-left: 24px;
+
+    @media @phone-strict {
+        font-size: 1.2em;
+    }
+
+    @media @desktop {
+        display: none !important;
     }
 }
 
