--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,8 +8,10 @@
     <title>7h3_5h0p</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
+<div class=background></div>
 <div class="page">
 
     <div class = "header">
@@ -25,9 +27,10 @@
     <div class="navigation">
         <div class="navigation__content">
             <div class="navigation__hamburger hamburger">
-                <i class="hamburger__icon fa fa-bars" aria-hidden="true"></i>
+                <i class="hamburger__icon-bars fa fa-bars" aria-hidden="true"></i>
+                <i class="hamburger__icon-times fa fa-times" aria-hidden="true"></i>
 
-                <div class="navigation__link">
+                <div class="navigation__links">
                     <ul class="navigation__list">
                         <% const navigation = ['LISP', 'OCaml', 'JavaScript', 'Python', 'PHP']; %>
                         <% navigation.forEach(function(item, index) { %>
