--- a/src/index.ejs
+++ b/src/index.ejs
@@ -64,46 +64,64 @@
         </div>
 
         <div class="product">
+
+        <div class="product__content">
             <img class="product__pic" src="img/tshirt_white.jpg" alt="Белая футболка" title="Белая футболка">
-            <div class="product-info">
-                <div class="product-info__text">
-                    <h2 class="product-info__title">Футболка Alien technology</h2>
-                    <p class="product-info__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
-                    <div class="product-info__price">1500₽</div>
-                </div>
-                <div class="product-info__size size">
-                    <div class="size__text">Размер:</div>
-                    <div class="size__icon">
-                        <% const size = ['S', 'M', 'L']; %>
-                        <% size.forEach(function(item, index) { %>
+                <div class="product-info">
+                    <div class="product-info__text">
+                        <h2 class="product-info__title">Футболка Alien technology</h2>
+                        <p class="product-info__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
+                        <div class="product-info__price">1500₽</div>
+                    </div>
+                    <div class="product-info__size size">
+                        <div class="size__text">Размер:</div>
+                        <div class="size__icon">
+                            <% const size = ['S', 'M', 'L']; %>
+                            <% size.forEach(function(item, index) { %>
 
-                        <p class="size__item size__item_<%= item.toLowerCase(); %> <% if (index == 1) { %>size__item_active<% }%>">
-                            <input class="size__radio" name="size" type="radio" value="size__item_<%= item.toLowerCase(); %>" <% if (index == 1) { %>checked <% }%> ><%= item; %>
-                        </p>
-                        <% }); %>
+                            <p class="size__item size__item_<%= item.toLowerCase(); %> <% if (index == 1) { %>size__item_active<% }%>">
+                                <input class="size__radio" name="size" type="radio" value="size__item_<%= item.toLowerCase(); %>" <% if (index == 1) { %>checked <% }%> ><%= item; %>
+                            </p>
+                            <% }); %>
+                        </div>
+                    </div>
+                    <div class="product-info__color color">
+                        <div class="color__text">Цвет:</div>
+
+                        <div class="color__icon">
+                            <% const color = ['white', 'yellow', 'green']; %>
+                            <% color.forEach(function(item, index) { %>
+
+                            <p class="color__item color__item_<%= item; %> <% if (index == 0) { %>color__item_active<% }%>">
+                                <input class="color__radio" name="color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
+                            </p>
+                            <% }); %>
+                        </div>
+                    </div>
+                    <div class="product__buy">
+                        <button class="button__buy">Купить</button>
+                        <div class="wish-list">
+                            <div class="wish-list__heart"><img class="heart heart-like" src="img/heart-button.svg" alt="Лайк"></div>
+                            <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
+                        </div>
                     </div>
                 </div>
-                <div class="product-info__color color">
-                    <div class="color__text">Цвет:</div>
+        </div>
 
-                    <div class="color__icon">
-                        <% const color = ['white', 'yellow', 'green']; %>
-                        <% color.forEach(function(item, index) { %>
 
-                        <p class="color__item color__item_<%= item; %> <% if (index == 0) { %>color__item_active<% }%>">
-                            <input class="color__radio" name="color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
-                        </p>
-                        <% }); %>
-                    </div>
-                </div>
-                <div class="product__buy">
-                    <button class="button__buy">Купить</button>
-                    <div class="wish-list">
-                        <div class="wish-list__heart"><img class="heart heart-like" src="img/heart-button.svg" alt="Лайк"></div>
-                        <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
-                    </div>
+            <div class="product-info__color color color_show">
+                <div class="color__text">Цвет:</div>
+
+                <div class="color__icon color__icon_show">
+                    <% color.forEach(function(item, index) { %>
+
+                    <p class="color__item color__item_<%= item; %> <% if (index == 0) { %>color__item_active<% }%>">
+                        <input class="color__radio" name="color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
+                    </p>
+                    <% }); %>
                 </div>
             </div>
+
         </div>
     </div>
 
