--- a/src/less/main.less
+++ b/src/less/main.less
@@ -80,6 +80,10 @@ body {
 .shop-logo {
     padding-left: 1.6%;
 
+    ::selection {
+        background: transparent;
+    }
+
     @media @phone-strict {
         padding-bottom: 10px;
         padding-left: 0;
@@ -111,6 +115,12 @@ body {
         width: 49px;
         fill: @color-text;
 
+        &:hover {
+            /*shadow: 3px 2px hsla(355, 100%, 30%, .2);*/
+            fill: #a20a0b !important;
+            width: 50px;
+        }
+
         @media @phone-strict {
             width: 40px;
         }
@@ -118,7 +128,13 @@ body {
 }
 
 .phone {
+    text-decoration: none;
     margin-right: 2px;
+
+    &:hover {
+        text-shadow: 3px 2px hsla(355, 100%, 30%, 0.2);
+        font-size: 1.45em;
+    }
 
     @media @phone-strict {
         padding-bottom: 10px;
