--- a/src/less/main.less
+++ b/src/less/main.less
@@ -105,6 +105,7 @@ body {
 
 .oggetto-logo {
     padding-left: 7.4%;
+    color: #a20a0b;
 
     @media @phone-strict {
         padding-bottom: 10px;
@@ -258,6 +259,7 @@ body {
         height: 34px;
         width: 276px;
         margin-right: 3px;
+        padding-left: 5px;
         background: white url(../img/search.png) no-repeat 97%;
         border: 1px solid @color-border;
 
@@ -270,9 +272,17 @@ body {
             height: 28px;
             width: 200px;
         }
+
+        @media @large {
+            width: 241px;
+            padding-right: 30px;
+        }
     }
 }
 
+.navigation__search:focus {
+    outline: 2px solid @color-text; /* Рамка при получении фокуса */
+}
 
 .hamburger {
     &__icon-bars {
