--- a/src/index.ejs
+++ b/src/index.ejs
@@ -31,16 +31,16 @@
 
     <div class="navigation">
         <div class="navigation__content">
-            <div class="navigation__hamburger hamburger">
-                <i class="hamburger__icon-bars fa fa-bars" aria-hidden="true"></i>
-                <i class="hamburger__icon-times fa fa-times" aria-hidden="true"></i>
+            <div class="menu">
+                <i class="menu__icon-bars fa fa-bars" aria-hidden="true"></i>
+                <i class="menu__icon-times fa fa-times" aria-hidden="true"></i>
 
-                <div class="navigation__links">
-                    <ul class="navigation__list">
-                        <% const navigation = ['LISP', 'OCaml', 'JavaScript', 'Python', 'PHP']; %>
-                        <% navigation.forEach(function(item, index) { %>
-                        <li class="navigation__item">
-                            <a href="#" class="navigation__link <% if(index == 0) { %>navigation__link_active<% } %>"><%= item; %></a>
+                <div class="menu__links">
+                    <ul class="menu__list">
+                        <% const menu = ['LISP', 'OCaml', 'JavaScript', 'Python', 'PHP']; %>
+                        <% menu.forEach(function(item, index) { %>
+                        <li class="menu__item">
+                            <a href="#" class="mnavigationenu__link <% if(index == 0) { %>menu__link_active<% } %>"><%= item; %></a>
                         </li>
                         <% }); %>
                     </ul>
@@ -51,6 +51,7 @@
             </form>
         </div>
     </div>
+
 
     <div class="content">
         <div class="breadcrumbs">
