--- a/src/index.ejs
+++ b/src/index.ejs
@@ -40,7 +40,7 @@
                         <% const menu = ['LISP', 'OCaml', 'JavaScript', 'Python', 'PHP']; %>
                         <% menu.forEach(function(item, index) { %>
                         <li class="menu__item">
-                            <a href="#" class="mnavigationenu__link <% if(index == 0) { %>menu__link_active<% } %>"><%= item; %></a>
+                            <a href="#" class="menu__link <% if(index == 0) { %>menu__link_active<% } %>"><%= item; %></a>
                         </li>
                         <% }); %>
                     </ul>
@@ -74,36 +74,56 @@
         <div class="product__content">
             <img class="product__pic" src="img/tshirt_white.jpg" alt="Белая футболка" title="Белая футболка">
                 <div class="product-info">
-                    <div class="product-info__text">
-                        <h2 class="product-info__title">Футболка Alien technology</h2>
-                        <p class="product-info__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
-                        <div class="product-info__price">1500₽</div>
+                    <div class="product-text">
+                        <h2 class="product-text__title">Футболка Alien technology</h2>
+                        <p class="product-text__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
+                        <div class="product-text__price">1500₽</div>
                     </div>
-                    <div class="product-info__size size">
-                        <div class="size__text">Размер:</div>
-                        <div class="size__icon">
+
+
+
+
+                    <div class="product-size">
+                        <div class="product-size__text">Размер:</div>
+                        <div class="product-size__icon">
                             <% const size = ['S', 'M', 'L']; %>
                             <% size.forEach(function(item, index) { %>
 
-                            <p class="size__item size__item_<%= item.toLowerCase(); %> <% if (index == 1) { %>size__item_active<% }%>">
-                                <input class="size__radio" name="size" type="radio" value="size__item_<%= item.toLowerCase(); %>" <% if (index == 1) { %>checked <% }%> ><%= item; %>
+                            <p class="product-size__item product-size__item_<%= item.toLowerCase(); %> <% if (index == 1) { %>product-size__item_active<% }%>">
+                                <input class="product-size__radio" name="size" type="radio" value="product-size__item_<%= item.toLowerCase(); %>" <% if (index == 1) { %>checked <% }%> ><%= item; %>
                             </p>
                             <% }); %>
                         </div>
                     </div>
-                    <div class="product-info__color color">
+
+
+                    <!--<div class="product-info__color color">
                         <div class="color__text">Цвет:</div>
 
                         <div class="color__icon">
+                            < const color = ['white', 'yellow', 'green']; >
+                            < color.forEach(function(item, index) { >
+
+                            <p class="color__item color__item_<= item; > < if (index == 0) { >color__item_active< }>">
+                                <input class="color__radio" name="color" type="radio" value="<= item; >" < if (index == 0) { >checked < }> >
+                            </p>
+                            < }); >
+                        </div>
+                    </div>-->
+                    <div class="product-color">
+                        <div class="product-color__text">Цвет:</div>
+
+                        <div class="product-color__icon">
                             <% const color = ['white', 'yellow', 'green']; %>
                             <% color.forEach(function(item, index) { %>
 
-                            <p class="color__item color__item_<%= item; %> <% if (index == 0) { %>color__item_active<% }%>">
-                                <input class="color__radio" name="color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
+                            <p class="product-color__item product-color__item_<%= item; %> <% if (index == 0) { %>product-color__item_active<% }%>">
+                                <input class="product-color__radio" name="product-color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
                             </p>
                             <% }); %>
                         </div>
                     </div>
+
                     <div class="product__buy">
                         <button class="button__buy">Купить</button>
                         <div class="wish-list">
@@ -113,16 +133,14 @@
                     </div>
                 </div>
         </div>
+            <div class="product-color product-color_show">
+                <div class="product-color__text">Цвет:</div>
 
-
-            <div class="product-info__color color color_show">
-                <div class="color__text">Цвет:</div>
-
-                <div class="color__icon color__icon_show">
+                <div class="product-color__icon product-color__icon_show">
                     <% color.forEach(function(item, index) { %>
 
-                    <p class="color__item color__item_<%= item; %> <% if (index == 0) { %>color__item_active<% }%>">
-                        <input class="color__radio" name="color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
+                    <p class="product-color__item product-color__item_<%= item; %> <% if (index == 0) { %>color__item_active<% }%>">
+                        <input class="product-color__radio" name="product-color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
                     </p>
                     <% }); %>
                 </div>
