add responsive product text

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -72,66 +72,52 @@
         <div class="product">
 
         <div class="product__content">
-            <img class="product__pic" src="img/tshirt_white.jpg" alt="Белая футболка" title="Белая футболка">
-                <div class="product-info">
-                    <div class="product-text">
-                        <h2 class="product-text__title">Футболка Alien technology</h2>
-                        <p class="product-text__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
-                        <div class="product-text__price">1500₽</div>
-                    </div>
+            <div class="product__pics">
+                <img class="product__pic" src="img/tshirt_white.jpg" alt="Белая футболка" title="Белая футболка">
+            </div>
 
+            <div class="product-info">
+                <div class="product-text">
+                    <h2 class="product-text__title">Футболка Alien technology</h2>
+                    <p class="product-text__description">Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.</p>
+                    <div class="product-text__price">1500₽</div>
+                </div>
 
+                <div class="product-size">
+                    <div class="product-size__text">Размер:</div>
+                    <div class="product-size__icon">
+                        <% const size = ['S', 'M', 'L']; %>
+                        <% size.forEach(function(item, index) { %>
 
-
-                    <div class="product-size">
-                        <div class="product-size__text">Размер:</div>
-                        <div class="product-size__icon">
-                            <% const size = ['S', 'M', 'L']; %>
-                            <% size.forEach(function(item, index) { %>
-
-                            <p class="product-size__item product-size__item_<%= item.toLowerCase(); %> <% if (index == 1) { %>product-size__item_active<% }%>">
-                                <input class="product-size__radio" name="size" type="radio" value="product-size__item_<%= item.toLowerCase(); %>" <% if (index == 1) { %>checked <% }%> ><%= item; %>
-                            </p>
-                            <% }); %>
-                        </div>
-                    </div>
-
-
-                    <!--<div class="product-info__color color">
-                        <div class="color__text">Цвет:</div>
-
-                        <div class="color__icon">
-                            < const color = ['white', 'yellow', 'green']; >
-                            < color.forEach(function(item, index) { >
-
-                            <p class="color__item color__item_<= item; > < if (index == 0) { >color__item_active< }>">
-                                <input class="color__radio" name="color" type="radio" value="<= item; >" < if (index == 0) { >checked < }> >
-                            </p>
-                            < }); >
-                        </div>
-                    </div>-->
-                    <div class="product-color">
-                        <div class="product-color__text">Цвет:</div>
-
-                        <div class="product-color__icon">
-                            <% const color = ['white', 'yellow', 'green']; %>
-                            <% color.forEach(function(item, index) { %>
-
-                            <p class="product-color__item product-color__item_<%= item; %> <% if (index == 0) { %>product-color__item_active<% }%>">
-                                <input class="product-color__radio" name="product-color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
-                            </p>
-                            <% }); %>
-                        </div>
-                    </div>
-
-                    <div class="product__buy">
-                        <button class="button__buy">Купить</button>
-                        <div class="wish-list">
-                            <div class="wish-list__heart"><img class="heart heart-like" src="img/heart-button.svg" alt="Лайк"></div>
-                            <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
-                        </div>
+                        <p class="product-size__item product-size__item_<%= item.toLowerCase(); %> <% if (index == 1) { %>product-size__item_active<% }%>">
+                            <input class="product-size__radio" name="size" type="radio" value="product-size__item_<%= item.toLowerCase(); %>" <% if (index == 1) { %>checked <% }%> ><%= item; %>
+                        </p>
+                        <% }); %>
                     </div>
                 </div>
+
+                <div class="product-color">
+                    <div class="product-color__text">Цвет:</div>
+
+                    <div class="product-color__icon">
+                        <% const color = ['white', 'yellow', 'green']; %>
+                        <% color.forEach(function(item, index) { %>
+
+                        <p class="product-color__item product-color__item_<%= item; %> <% if (index == 0) { %>product-color__item_active<% }%>">
+                            <input class="product-color__radio" name="product-color" type="radio" value="<%= item; %>" <% if (index == 0) { %>checked <% }%> >
+                        </p>
+                        <% }); %>
+                    </div>
+                </div>
+
+                <div class="product__buy">
+                    <button class="button__buy">Купить</button>
+                    <div class="wish-list">
+                        <div class="wish-list__heart"><img class="heart heart-like" src="img/heart-button.svg" alt="Лайк"></div>
+                        <div class="wish-list__item"><a href="#" class="wish-list__link">Отложить на потом</a></div>
+                    </div>
+                </div>
+            </div>
         </div>
             <div class="product-color product-color_show">
                 <div class="product-color__text">Цвет:</div>
